@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1374: Ability to provide input file with userid, itemid pair (Aliaksei Litouka via ssc)
+
   MAHOUT-1501: ClusterOutputPostProcessorDriver has private default constructor (ssc)
 
   MAHOUT-1482: Rework quickstart website (Jian Wang via ssc)
